[package]
name = "wxlistener"
version = "0.1.7"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "chrono"] }
rumqttc = "0.25.1"
url = "2.5.7"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
criterion = "0.5"
serial_test = "3.0"
tower = "0.5"

[[bench]]
name = "decoder_bench"
harness = false

[[bench]]
name = "protocol_bench"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
